examples/failing/brackets-2.hogo
; Too many closing brackets!

repeat 5 [
forward 50
]
]
]
]
]
